--- a/templates/product.html
+++ b/templates/product.html
@@ -12,15 +12,16 @@
 
 
     <div class="content">
-
+        {% for phone in phone_name %}
         <div class="Phone">
+
           <h3> {{ phone.name }}</h3>
           <div>Стоимость: {{ phone.price }} ₽</div>
           <div>Дата выпуска: {{ phone.release_date }}</div>
           <div>LTE: {{ phone.lte_exists|yesno:'есть,нет' }}</div>
           <img height="400" src="{{ phone.image }}" alt="{{ phone.name }}"/>
         </div>
-
+        {% endfor %}
     </div>
   </div>
 {% endblock %}
